clusters/aks-dev-elemam-02/workloads/bookstack/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookstack
  labels:
    istio-injection: enabled
